Set startupID before raising

Otherwise it will be blocked correctly by window manager focus policies

BUG: 423857